--- a/src/ShoppingList.css
+++ b/src/ShoppingList.css
@@ -8,7 +8,7 @@
     margin-bottom: 1rem;
 }
 
-.shopping-list {
+.paper {
     background-image: url("./assets/bg-line.jpg");
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     height: 400px;
@@ -20,7 +20,7 @@
     font-size: 1.3rem;
 }
 
-.shopping-list:before, .shopping-list:after {
+.paper:before, .paper:after {
     content: "";
     height: 98%;
     position: absolute;
@@ -28,7 +28,7 @@
     z-index: -1;
 }
 
-.shopping-list:before {
+.paper:before {
     background-image: url("./assets/bg-line.jpg");
     box-shadow: 0 0 8px rgba(0,0,0,0.2);
     left: -5px;
@@ -36,10 +36,26 @@
     transform: rotate(-2.5deg);
 }
 
-.shopping-list:after {
+.paper:after {
     background-image: url("./assets/bg-line.jpg");
     box-shadow: 0 0 3px rgba(0,0,0,0.2);
     left: -3px;
     top: 1px;
     transform: rotate(1.4deg);
+}
+
+.delete-btn {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.2em 0.6em;
+    font-size: 0.5em;
+    font-weight: 600;
+    background-color: #750707;
+    cursor: pointer;
+    transition: border-color 0.25s;
+}
+
+.delete-btn:hover {
+    border-color: #b40e0e;
+    background-color: #9c0b0b;
 }
